Fix social alignment on small screens

--- a/mu-plugins/blocks/global-header-footer/postcss/footer/social-links.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/footer/social-links.pcss
@@ -13,7 +13,6 @@
 	position: relative;
 	top: -3px; /* Align with W logo. */
 	justify-content: flex-end;
-	flex-basis: 35%;
 	min-width: 100px;
 
 	@media (--tablet) {
